<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuService"
        android:orderInCategory="100"
        android:title="@string/title_activity_service"/>
    <item
        android:id="@+id/menuDirectory"
        android:orderInCategory="100"
        android:title="@string/menuDirectory">
    </item>
    <item
        android:id="@+id/menuSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings">
    </item>
    <item
        android:id="@+id/menuAbout"
        android:orderInCategory="100"
        android:title="@string/menuAbout">
    </item>
    <item
        android:id="@+id/menuExit"
        android:orderInCategory="100"
        android:title="@string/menuExit">
    </item>
    
        <item
        android:id="@+id/menuAddPart"
        android:orderInCategory="100"
        android:title="@string/menuAddPart">
    </item>
    
  
    <item
        android:id="@+id/menuParts"
        android:orderInCategory="100"
        android:title="@string/menuParts">
    </item>
    
</menu>