<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    
    <ImageButton
        android:id="@+id/btbMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:onClick="onClickbtnMain"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btbMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/app_welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtService"
        android:layout_below="@+id/btbMain"
        android:gravity="center"
        android:text="@string/app_welcome_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtService"
        android:layout_below="@+id/txtService"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/req_db" />

        <EditText
            android:id="@+id/nameOfPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/hint_name_of_part"
            android:inputType="text"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

       <EditText
           android:id="@+id/oldChange"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/nameOfPart"
           android:layout_below="@+id/nameOfPart"
           android:ems="10"
           android:hint="@string/hint_old_change"
           android:inputType="number"
           android:maxLines="1" />

       <EditText
           android:id="@+id/serviceChange"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/oldChange"
           android:layout_below="@+id/oldChange"
           android:ems="10"
           android:hint="@string/hint_service_change"
           android:inputType="number"
           android:maxLines="1" />

       <EditText
           android:id="@+id/catalogeNameOfPart"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/serviceChange"
           android:layout_below="@+id/serviceChange"
           android:ems="10"
           android:hint="@string/hint_cataloge_part_name"
           android:inputType="text"
           android:maxLines="1" />
       

</RelativeLayout>